14/SQLParser.py
# Generated from SQL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SQLParser ( Parser ):

    grammarFileName = "SQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'CREATE'", "'TABLE'", "'SERIAL'", 
                     "'PRIMARY'", "'KEY'", "'VARCHAR'", "'INTEGER'", "'NOT'", 
                     "'NULL'", "'DATE'", "'INSERT'", "'INTO'", "'VALUES'", 
                     "'UPDATE'", "'SET'", "'WHERE'", "'SELECT'", "'FROM'", 
                     "'JOIN'", "'ON'", "'INNER'", "'LEFT'", "'RIGHT'", "'AND'", 
                     "'OR'", "'('", "')'", "','", "';'", "'.'", "'='", "'>'", 
                     "'<'", "'>='", "'<='", "'<>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "CREATE", "TABLE", "SERIAL", 
                      "PRIMARY", "KEY", "VARCHAR", "INTEGER", "NOT", "NULL", 
                      "DATE", "INSERT", "INTO", "VALUES", "UPDATE", "SET", 
                      "WHERE", "SELECT", "FROM", "JOIN", "ON", "INNER", 
                      "LEFT", "RIGHT", "AND", "OR", "LPAREN", "RPAREN", 
                      "COMMA", "SEMI", "DOT", "EQ", "GT", "LT", "GE", "LE", 
                      "NE", "ID", "NUM", "STRING", "WS" ]

    RULE_root = 0
    RULE_sqlStmt = 1
    RULE_createTableStmt = 2
    RULE_tableName = 3
    RULE_columnDef = 4
    RULE_columnName = 5
    RULE_dataType = 6
    RULE_columnConstraint = 7
    RULE_insertStmt = 8
    RULE_updateStmt = 9
    RULE_setClause = 10
    RULE_selectStmt = 11
    RULE_joinClause = 12
    RULE_selectList = 13
    RULE_selectItem = 14
    RULE_tableRef = 15
    RULE_expr = 16

    ruleNames =  [ "root", "sqlStmt", "createTableStmt", "tableName", "columnDef", 
                   "columnName", "dataType", "columnConstraint", "insertStmt", 
                   "updateStmt", "setClause", "selectStmt", "joinClause", 
                   "selectList", "selectItem", "tableRef", "expr" ]

    EOF = Token.EOF
    T__0=1
    CREATE=2
    TABLE=3
    SERIAL=4
    PRIMARY=5
    KEY=6
    VARCHAR=7
    INTEGER=8
    NOT=9
    NULL=10
    DATE=11
    INSERT=12
    INTO=13
    VALUES=14
    UPDATE=15
    SET=16
    WHERE=17
    SELECT=18
    FROM=19
    JOIN=20
    ON=21
    INNER=22
    LEFT=23
    RIGHT=24
    AND=25
    OR=26
    LPAREN=27
    RPAREN=28
    COMMA=29
    SEMI=30
    DOT=31
    EQ=32
    GT=33
    LT=34
    GE=35
    LE=36
    NE=37
    ID=38
    NUM=39
    STRING=40
    WS=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SQLParser.EOF, 0)

        def sqlStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.SqlStmtContext)
            else:
                return self.getTypedRuleContext(SQLParser.SqlStmtContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.SEMI)
            else:
                return self.getToken(SQLParser.SEMI, i)

        def getRuleIndex(self):
            return SQLParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)




    def root(self):

        localctx = SQLParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 299012) != 0):
                self.state = 34
                self.sqlStmt()
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==30:
                    self.state = 35
                    self.match(SQLParser.SEMI)


                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self.match(SQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SqlStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def createTableStmt(self):
            return self.getTypedRuleContext(SQLParser.CreateTableStmtContext,0)


        def insertStmt(self):
            return self.getTypedRuleContext(SQLParser.InsertStmtContext,0)


        def updateStmt(self):
            return self.getTypedRuleContext(SQLParser.UpdateStmtContext,0)


        def selectStmt(self):
            return self.getTypedRuleContext(SQLParser.SelectStmtContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_sqlStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSqlStmt" ):
                listener.enterSqlStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSqlStmt" ):
                listener.exitSqlStmt(self)




    def sqlStmt(self):

        localctx = SQLParser.SqlStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sqlStmt)
        try:
            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.createTableStmt()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.insertStmt()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.updateStmt()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.selectStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateTableStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(SQLParser.CREATE, 0)

        def TABLE(self):
            return self.getToken(SQLParser.TABLE, 0)

        def tableName(self):
            return self.getTypedRuleContext(SQLParser.TableNameContext,0)


        def LPAREN(self):
            return self.getToken(SQLParser.LPAREN, 0)

        def columnDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.ColumnDefContext)
            else:
                return self.getTypedRuleContext(SQLParser.ColumnDefContext,i)


        def RPAREN(self):
            return self.getToken(SQLParser.RPAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.COMMA)
            else:
                return self.getToken(SQLParser.COMMA, i)

        def getRuleIndex(self):
            return SQLParser.RULE_createTableStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateTableStmt" ):
                listener.enterCreateTableStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateTableStmt" ):
                listener.exitCreateTableStmt(self)




    def createTableStmt(self):

        localctx = SQLParser.CreateTableStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_createTableStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(SQLParser.CREATE)
            self.state = 52
            self.match(SQLParser.TABLE)
            self.state = 53
            self.tableName()
            self.state = 54
            self.match(SQLParser.LPAREN)
            self.state = 55
            self.columnDef()
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 56
                self.match(SQLParser.COMMA)
                self.state = 57
                self.columnDef()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(SQLParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SQLParser.ID, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_tableName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableName" ):
                listener.enterTableName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableName" ):
                listener.exitTableName(self)




    def tableName(self):

        localctx = SQLParser.TableNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tableName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(SQLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnName(self):
            return self.getTypedRuleContext(SQLParser.ColumnNameContext,0)


        def dataType(self):
            return self.getTypedRuleContext(SQLParser.DataTypeContext,0)


        def columnConstraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.ColumnConstraintContext)
            else:
                return self.getTypedRuleContext(SQLParser.ColumnConstraintContext,i)


        def getRuleIndex(self):
            return SQLParser.RULE_columnDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnDef" ):
                listener.enterColumnDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnDef" ):
                listener.exitColumnDef(self)




    def columnDef(self):

        localctx = SQLParser.ColumnDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_columnDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.columnName()
            self.state = 68
            self.dataType()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==9:
                self.state = 69
                self.columnConstraint()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SQLParser.ID, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_columnName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnName" ):
                listener.enterColumnName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnName" ):
                listener.exitColumnName(self)




    def columnName(self):

        localctx = SQLParser.ColumnNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_columnName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(SQLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SERIAL(self):
            return self.getToken(SQLParser.SERIAL, 0)

        def INTEGER(self):
            return self.getToken(SQLParser.INTEGER, 0)

        def VARCHAR(self):
            return self.getToken(SQLParser.VARCHAR, 0)

        def LPAREN(self):
            return self.getToken(SQLParser.LPAREN, 0)

        def NUM(self):
            return self.getToken(SQLParser.NUM, 0)

        def RPAREN(self):
            return self.getToken(SQLParser.RPAREN, 0)

        def DATE(self):
            return self.getToken(SQLParser.DATE, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_dataType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataType" ):
                listener.enterDataType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataType" ):
                listener.exitDataType(self)




    def dataType(self):

        localctx = SQLParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dataType)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.match(SQLParser.SERIAL)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(SQLParser.INTEGER)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.match(SQLParser.VARCHAR)
                self.state = 80
                self.match(SQLParser.LPAREN)
                self.state = 81
                self.match(SQLParser.NUM)
                self.state = 82
                self.match(SQLParser.RPAREN)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.match(SQLParser.DATE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnConstraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIMARY(self):
            return self.getToken(SQLParser.PRIMARY, 0)

        def KEY(self):
            return self.getToken(SQLParser.KEY, 0)

        def NOT(self):
            return self.getToken(SQLParser.NOT, 0)

        def NULL(self):
            return self.getToken(SQLParser.NULL, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_columnConstraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnConstraint" ):
                listener.enterColumnConstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnConstraint" ):
                listener.exitColumnConstraint(self)




    def columnConstraint(self):

        localctx = SQLParser.ColumnConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_columnConstraint)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.match(SQLParser.PRIMARY)
                self.state = 87
                self.match(SQLParser.KEY)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.match(SQLParser.NOT)
                self.state = 89
                self.match(SQLParser.NULL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(SQLParser.INSERT, 0)

        def INTO(self):
            return self.getToken(SQLParser.INTO, 0)

        def tableName(self):
            return self.getTypedRuleContext(SQLParser.TableNameContext,0)


        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.LPAREN)
            else:
                return self.getToken(SQLParser.LPAREN, i)

        def columnName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.ColumnNameContext)
            else:
                return self.getTypedRuleContext(SQLParser.ColumnNameContext,i)


        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.RPAREN)
            else:
                return self.getToken(SQLParser.RPAREN, i)

        def VALUES(self):
            return self.getToken(SQLParser.VALUES, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.ExprContext)
            else:
                return self.getTypedRuleContext(SQLParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.COMMA)
            else:
                return self.getToken(SQLParser.COMMA, i)

        def getRuleIndex(self):
            return SQLParser.RULE_insertStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertStmt" ):
                listener.enterInsertStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertStmt" ):
                listener.exitInsertStmt(self)




    def insertStmt(self):

        localctx = SQLParser.InsertStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_insertStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(SQLParser.INSERT)
            self.state = 93
            self.match(SQLParser.INTO)
            self.state = 94
            self.tableName()
            self.state = 95
            self.match(SQLParser.LPAREN)
            self.state = 96
            self.columnName()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 97
                self.match(SQLParser.COMMA)
                self.state = 98
                self.columnName()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 104
            self.match(SQLParser.RPAREN)
            self.state = 105
            self.match(SQLParser.VALUES)
            self.state = 106
            self.match(SQLParser.LPAREN)
            self.state = 107
            self.expr(0)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 108
                self.match(SQLParser.COMMA)
                self.state = 109
                self.expr(0)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(SQLParser.RPAREN)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 116
                self.match(SQLParser.COMMA)
                self.state = 117
                self.match(SQLParser.LPAREN)
                self.state = 118
                self.expr(0)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==29:
                    self.state = 119
                    self.match(SQLParser.COMMA)
                    self.state = 120
                    self.expr(0)
                    self.state = 125
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 126
                self.match(SQLParser.RPAREN)
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UPDATE(self):
            return self.getToken(SQLParser.UPDATE, 0)

        def tableName(self):
            return self.getTypedRuleContext(SQLParser.TableNameContext,0)


        def SET(self):
            return self.getToken(SQLParser.SET, 0)

        def setClause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.SetClauseContext)
            else:
                return self.getTypedRuleContext(SQLParser.SetClauseContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.COMMA)
            else:
                return self.getToken(SQLParser.COMMA, i)

        def WHERE(self):
            return self.getToken(SQLParser.WHERE, 0)

        def expr(self):
            return self.getTypedRuleContext(SQLParser.ExprContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_updateStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdateStmt" ):
                listener.enterUpdateStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdateStmt" ):
                listener.exitUpdateStmt(self)




    def updateStmt(self):

        localctx = SQLParser.UpdateStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_updateStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(SQLParser.UPDATE)
            self.state = 134
            self.tableName()
            self.state = 135
            self.match(SQLParser.SET)
            self.state = 136
            self.setClause()
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 137
                self.match(SQLParser.COMMA)
                self.state = 138
                self.setClause()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 144
                self.match(SQLParser.WHERE)
                self.state = 145
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnName(self):
            return self.getTypedRuleContext(SQLParser.ColumnNameContext,0)


        def EQ(self):
            return self.getToken(SQLParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(SQLParser.ExprContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_setClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetClause" ):
                listener.enterSetClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetClause" ):
                listener.exitSetClause(self)




    def setClause(self):

        localctx = SQLParser.SetClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_setClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.columnName()
            self.state = 149
            self.match(SQLParser.EQ)
            self.state = 150
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(SQLParser.SELECT, 0)

        def selectList(self):
            return self.getTypedRuleContext(SQLParser.SelectListContext,0)


        def FROM(self):
            return self.getToken(SQLParser.FROM, 0)

        def tableRef(self):
            return self.getTypedRuleContext(SQLParser.TableRefContext,0)


        def joinClause(self):
            return self.getTypedRuleContext(SQLParser.JoinClauseContext,0)


        def WHERE(self):
            return self.getToken(SQLParser.WHERE, 0)

        def expr(self):
            return self.getTypedRuleContext(SQLParser.ExprContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_selectStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectStmt" ):
                listener.enterSelectStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectStmt" ):
                listener.exitSelectStmt(self)




    def selectStmt(self):

        localctx = SQLParser.SelectStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_selectStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(SQLParser.SELECT)
            self.state = 153
            self.selectList()
            self.state = 154
            self.match(SQLParser.FROM)
            self.state = 155
            self.tableRef()
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30408704) != 0):
                self.state = 156
                self.joinClause()


            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 159
                self.match(SQLParser.WHERE)
                self.state = 160
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JoinClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def JOIN(self):
            return self.getToken(SQLParser.JOIN, 0)

        def tableRef(self):
            return self.getTypedRuleContext(SQLParser.TableRefContext,0)


        def ON(self):
            return self.getToken(SQLParser.ON, 0)

        def expr(self):
            return self.getTypedRuleContext(SQLParser.ExprContext,0)


        def INNER(self):
            return self.getToken(SQLParser.INNER, 0)

        def LEFT(self):
            return self.getToken(SQLParser.LEFT, 0)

        def RIGHT(self):
            return self.getToken(SQLParser.RIGHT, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_joinClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJoinClause" ):
                listener.enterJoinClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJoinClause" ):
                listener.exitJoinClause(self)




    def joinClause(self):

        localctx = SQLParser.JoinClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_joinClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 29360128) != 0):
                self.state = 163
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 29360128) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 166
            self.match(SQLParser.JOIN)
            self.state = 167
            self.tableRef()
            self.state = 168
            self.match(SQLParser.ON)
            self.state = 169
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.SelectItemContext)
            else:
                return self.getTypedRuleContext(SQLParser.SelectItemContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.COMMA)
            else:
                return self.getToken(SQLParser.COMMA, i)

        def getRuleIndex(self):
            return SQLParser.RULE_selectList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectList" ):
                listener.enterSelectList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectList" ):
                listener.exitSelectList(self)




    def selectList(self):

        localctx = SQLParser.SelectListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_selectList)
        self._la = 0 # Token type
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.match(SQLParser.T__0)
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.selectItem()
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==29:
                    self.state = 173
                    self.match(SQLParser.COMMA)
                    self.state = 174
                    self.selectItem()
                    self.state = 179
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectItemContext(ParserRuleContext):
        __slots__ = 'parser'
